--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<!-- Mirrored from cursivas.licaokids.com.br/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 24 Feb 2026 02:40:45 GMT -->
+<!-- Mirrored from / by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 24 Feb 2026 02:40:45 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="UTF-8">
-		<title>Letras Cursivas</title>
+		<title>Aurora Criativa</title>
 <meta name='robots' content='max-image-preview:large' />
-<link rel="alternate" type="application/rss+xml" title="Feed para Letras Cursivas &raquo;" href="feed/index.html" />
-<link rel="alternate" type="application/rss+xml" title="Feed de comentários para Letras Cursivas &raquo;" href="comments/feed/index.html" />
+<link rel="alternate" type="application/rss+xml" title="Feed para Aurora Criativa &raquo;" href="feed/index.html" />
+<link rel="alternate" type="application/rss+xml" title="Feed de comentários para Aurora Criativa &raquo;" href="comments/feed/index.html" />
 <link rel="alternate" title="oEmbed (JSON)" type="application/json+oembed" href="wp-json/oembed/1.0/embedc2fc.json?url=https%3A%2F%2Fcursivas.licaokids.com.br%2F" />
 <link rel="alternate" title="oEmbed (XML)" type="text/xml+oembed" href="wp-json/oembed/1.0/embed9f22?url=https%3A%2F%2Fcursivas.licaokids.com.br%2F&amp;format=xml" />
 <style id='wp-img-auto-sizes-contain-inline-css'>
@@ -206,7 +206,7 @@ document.head.appendChild(a);
 					<div class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-5a82b47c" data-id="5a82b47c" data-element_type="column" data-e-type="column">
 			<div class="elementor-widget-wrap elementor-element-populated">
 						<div class="elementor-element elementor-element-3d87c272 elementor-widget elementor-widget-heading" data-id="3d87c272" data-element_type="widget" data-e-type="widget" data-widget_type="heading.default">
-					<h2 class="elementor-heading-title elementor-size-default">São <span style="color:#FF6799"><b>5 módulos</b></span> com mais de <span style="color:#FF6799"><b>300</b> <b>páginas</b></span> para aprender e treinar as letras cursivas!</h2>				</div>
+					<h2 class="elementor-heading-title elementor-size-default">São <span style="color:#FF6799"><b>5 módulos</b></span> com mais de <span style="color:#FF6799"><b>300</b> <b>páginas</b></span> para aprender e treinar as Aurora Criativa!</h2>				</div>
 				<div class="elementor-element elementor-element-49e80bec elementor-widget elementor-widget-heading" data-id="49e80bec" data-element_type="widget" data-e-type="widget" data-widget_type="heading.default">
 					<h2 class="elementor-heading-title elementor-size-default">Arraste a animação abaixo para o lado, para visualizar as atividades do Material👇</h2>				</div>
 					</div>
@@ -1360,4 +1360,5 @@ const a=JSON.parse(document.getElementById("wp-emoji-settings").textContent),o=(
 
 
 <!-- Page cached by LiteSpeed Cache 7.7 on 2026-02-23 21:03:38 -->
+
 
